init spark tuning code base